--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="id">
 <head>
   <meta charset="UTF-8">
-  <title>Pengeluaran</title>
+  <title>Data AULA</title>
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <style>
     body {
@@ -122,7 +122,7 @@
   </style>
 </head>
 <body>
-  <h2>Pengeluaran</h2>
+  <h2>Data AULA</h2>
   <div class="filters">
     <input type="text" id="searchInput" placeholder="Cari di semua kolom...">
     <label for="rowsPerPage">Baris/halaman:</label>
